--- a/html/products/product_4.html
+++ b/html/products/product_4.html
@@ -46,12 +46,12 @@
             <img src="../../img/product_4/product_1.jpg" alt="slide" class="img">
           </div>
           <div class="name">
-            <h2>Платье "Zlata" со звёздами</h2>
+            <h2>платье "Zlata" с птицами</h2>
             <h2>n Р</h2>
           </div>
           <div class="description">
-            цвет: бургундия <br>
-            ткань: сетка с вышивкой, мягкий фатин, подклад - хлопок.
+            цвет: золото / чёрное <br>
+            ткань: сетка с вышивкой, мягкий фатин, трикотаж, подклад - хлопок
           </div>
           <div class="sizes">
             <div class="size">86</div>
