--- a/html/products/product_5.html
+++ b/html/products/product_5.html
@@ -50,7 +50,7 @@
             <h2>n Р</h2>
           </div>
           <div class="description">
-            цвет: бургундия <br>
+            цвет: чёрный/ красный <br>
             ткань: сетка с вышивкой, мягкий фатин, подклад - хлопок.
           </div>
           <div class="sizes">
