--- a/html/products/product_3.html
+++ b/html/products/product_3.html
@@ -50,7 +50,7 @@
             <h2>n Р</h2>
           </div>
           <div class="description">
-            цвет: золото / белое <br>
+            цвет: золото / белое 1 <br>
             ткань: сетка с вышивкой, мягкий фатин, трикотаж, подклад - хлопок.
           </div>
           <div class="sizes">
